fix [#36291] Applying subsurf to mesh or setting subdivisions to zero crashes Blender

issue was mesh somehow had a mismatch of UV/texpoly layers. we may want to allow this in the future but for now sync on load just in case.