source/blender/blenkernel/BKE_mesh.h
@@ -354,6 +354,7 @@ void BKE_mesh_calc_relative_deform(
 /* *** mesh_validate.c *** */
 
 int BKE_mesh_validate(struct Mesh *me, const int do_verbose);
+void BKE_mesh_cd_validate(struct Mesh *me);
 
 bool BKE_mesh_validate_arrays(
         struct Mesh *me,
